k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockportfolio-app
  namespace: default
  labels:
    app: stockportfolio-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stockportfolio-app
  template:
    metadata:
      labels:
        app: stockportfolio-app
    spec:
      containers:
        - name: stockportfolio-app
          image: 3piradians/stock-portfolio-manager:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /auth/login
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /auth/login
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
