k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockportfolio-service
  namespace: default
  labels:
    app: stockportfolio-app
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
  selector:
    app: stockportfolio-app
